--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "grana-calc",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,12 +11,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0"
-  },
-  "devDependencies": {
+    "react-chartjs-2": "^5.2.0",
     "vite": "^5.0.0",
     "tailwindcss": "^3.4.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "autoprefixer": "^10.4.0",
+    "@vitejs/plugin-react": "^5.0.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
